--- a/notebooks/2-projections_onto_subspaces.Rmd
+++ b/notebooks/2-projections_onto_subspaces.Rmd
@@ -1,13 +1,14 @@
 ---
 title: "Projections Onto Subspaces"
-author: "Ferran Muiños and Ramon Massoni-Badosa"
-date: "06/09/2020"
+author: "Ferran Muiños, Ramon Massoni-Badosa and Paula Gomis"
+date: "15/10/2023"
 output: 
   BiocStyle::html_document:
     toc: true
     toc_float: true
     number_sections: true
     code_folding: hide
+
 ---
 
 ```{r setup, include=FALSE}
@@ -19,20 +20,20 @@ knitr::opts_chunk$set(echo = TRUE)
 
 In this hands-on session, we will review the concept of projections onto vector subspaces. Specifically, we aim to achieve the following objectives:
 
-1. Use orthogonal projections to solve general systems of linear equations of the form Ax = b when b is not necessarily in the column space of A.
+1. Use orthogonal projections to find the best approximation to a solution for general systems of linear equations of the form $Ax = b$ with no solution. 
 2. Understand this problem both algebraically and geometrically. For the latter we will use the power of [Shiny apps](https://shiny.rstudio.com/).
-3. Find the least squares regression solution line for n points in R^2^ using the concepts explained in this session. Least squares is a real-world, pervasive application of linear algebra.
-4. Learn to use [ggplot2](https://ggplot2.tidyverse.org/) to obtain publication-quality graphics. 
+3. Find the least squares regression solution line for $n$ points in $\mathbb{R}^2$ using the concepts explained in this session. Least squares is a real-world, pervasive application of linear algebra.
+4. Learn to use [tidyverse](https://www.tidyverse.org/) and in particular [ggplot2](https://ggplot2.tidyverse.org/) to obtain publication-quality graphics. 
 
 
 # Disclaimer
 
-This hands-on session comprises some challenging concepts. We believe that all the students at your level are able to grasp them with time and dedication, but it would also be within the expected if you don't finish this document or don't understand everything in the classroom. You will have this document for you to study after the class, and we will be available to answer any questions.
+This hands-on session comprises some challenging concepts. We believe that all the students at your level are able to grasp them with time and dedication, but it would also be within the expected if you don't finish this document or don't understand everything in the classroom. You will have this document for you to study after the class and we will be available to answer any questions.
 
 
 # Description of the problem
 
-We want to find a suitable solution for a system of linear equations Ax = b that has no proper, exact solution in the traditional sense. We can approach this problem from two different perspectives, which master Gilbert Strang refers to as the "row and column pictures" of a system of equations.
+We want to find the best approximation to the solution for a system of linear equations $Ax = b$ that has no proper, exact solution in the traditional sense. We can approach this problem from two different perspectives, which master Gilbert Strang refers to as the "row and column pictures" of a system of equations.
 
 
 ## Row picture
@@ -40,14 +41,14 @@ We want to find a suitable solution for a system of linear equations Ax = b that
 Let us illustrate the problem with the following system of equations:
 
 ```{r echo=FALSE}
-system_equations <- noquote(paste(expression("x+0y=6\\\\x+y=0\\\\x+2y=0")))
+system_equations <- noquote(paste(expression("x=6\\\\x+y=0\\\\x+2y=0")))
 ```
 
 $$
 \begin{cases} `r system_equations` \end{cases}
 $$
 
-Which can be represented in matrix form as Ax = b:
+Which can be represented in matrix form as:
 
 $$
 Ax = b
@@ -76,9 +77,11 @@ $$
 `r write_matex2(A)` `r write_matex2(x)` = `r write_matex2(b)`
 $$
 
-Where A is the **coefficient matrix**, x is the vector that contains the **unknowns** and b is the vector that contains the **constants**. Geometrically, the row picture tells us that a system of linear equations has no solution if all the lines specified by the equations do not meet in a single point:
+Where $A$ is the **coefficient matrix**, $x$ is the vector that contains the **unknowns** and $b$ is the vector that contains the **constants**. 
 
-```{r echo=FALSE}
+Geometrically, the row picture tells us that a system of linear equations has no solution if all the lines specified by the equations do not meet in a single point:
+
+```{r echo=FALSE, message=FALSE, warning=FALSE}
 library(ggplot2)
 df <- as.data.frame(A)
 ggplot(df) +
@@ -98,107 +101,125 @@ ggplot(df) +
 
 This is typically the case in **systems of linear equations with more equations than unknowns**. We can think of these as systems with "tall and thin matrices" (more rows than columns). 
 
-The term "row picture" is reminiscent of the fact that each row of the system represents an equation, and every linear equation in the plane has typically not just one but many --a straight line of-- solutions.
+The term "row picture" is reminiscent of the fact that each row of the system represents an equation and every linear equation in the plane has typically not just one but many --a straight line of-- solutions.
 
 
 ## Column picture
 
-Understanding Ax = b using the column picture is the ultimate goal of linear algebra. We do not think of equations and unknowns anymore. Instead, we interpret the elements of this problem as follows: 
-
-* The matrix A specifies two column vectors (a<sub>1</sub> and a<sub>2</sub>). All the possible linear combinations of a<sub>1</sub> and a<sub>2</sub> (their span) are collectively known as the column space of A, or C(A).
-* The elements of x (x<sub>1</sub> and x<sub>2</sub> hereafter) specify which linear combination of a<sub>1</sub> and a<sub>2</sub> to take. The vector b specifies the result of a specific choice of x.
-
-The algebraic interpretation of the column picture of the previous example is the following:
-
-```{r echo=FALSE}
-a1 <- matrix(c(1, 1, 1), nrow = 3)
-a2 <- matrix(c(0, 1, 2), nrow = 3)
-x <- matrix(c("x1", "x2"), nrow = 2)
-b <- matrix(c(6, 0, 0), nrow = 3)
-```
+Understanding $Ax = b$ using the column picture is the ultimate goal of linear algebra. We do not think of equations and unknowns anymore. Instead, we represent the equations as a matrix-vector multiplication:
 
 $$
 Ax = b
 $$
+
+We can think of the vector $b$ as a linear combination of the column vectors of A. The scalars of this linear combinations are the elements of the vector $x$. 
+
+
+
+<!-- * The matrix $A$ specifies two column vectors ($a_1$ and $a_2$). All the possible linear combinations of $a_1$ and $a_2$ (their span) are collectively known as the column space of $A$, or $C(A)$. -->
+<!-- * The elements of $x$ ($x_1$ and $x_2$ hereafter) specify which linear combination of $a_1$ and $a_2$ to take. The vector $b$ specifies the result of a specific choice of $x$. -->
+
+<!-- The algebraic interpretation of the column picture of the previous example is the following: -->
+
+Considering our system of linear equations we have:
+
+```{r echo=FALSE}
+a1 <- matrix(c(1, 1, 1), nrow = 3)
+a2 <- matrix(c(0, 1, 2), nrow = 3)
+x <- matrix(c("x_1", "x_2"), nrow = 2)
+b <- matrix(c(6, 0, 0), nrow = 3)
+```
+
 
 $$
 `r write_matex2(A)` `r write_matex2(x)` = `r write_matex2(b)`
 $$
 
 $$
-x1 `r write_matex2(a1)` + x2 `r write_matex2(a2)` = `r write_matex2(b)`
+x_1 `r write_matex2(a1)` + x_2 `r write_matex2(a2)` = `r write_matex2(b)`
 $$
-Thus, Ax = b has no proper solution in the traditional sense whenever b is not contained in C(A). In other words, there is no two x<sub>1</sub> and x<sub>2</sub> that specify a linear combination of a<sub>1</sub> and a<sub>2</sub> that produces b. 
+*Remember that the column space of $A$ is the vector space generated by the
+columns of $A$ considered as vectors. 
+
+Thus, $Ax = b$ has no proper solution in the traditional sense whenever $b$ is not contained in $C(A)$. In other words, there is no two $x_1$ and $x_2$ that specify a linear combination of $a_1$ and $a_2$ that produces $b$. 
 
 **Exercise**
+
 To geometrically visualize this, enter the shiny app associated with this tutorial by clicking the following link or copying it into your browser:
 
 [https://massonix.shinyapps.io/projections_onto_subspaces/](https://massonix.shinyapps.io/projections_onto_subspaces/)
 
-Then, in the left hand side of the app enter the matrix A and the vector b. The app will render a visualization of C(A) as a plane in R^3^, and b as a vector in R^3^, which need not be contained in the plane.
+Then, in the left hand side of the app enter the matrix $A$ and the vector $b$. The app will render a visualization of **$C(A)$ as a plane** in $\mathbb{R}^3$, and **$b$ as a vector** in $\mathbb{R}^3$, which need not be contained in the plane.
 
 
 # Solving the problem
 
-As we have seen above, there is in general no vector x that will provide a proper solution of Ax = b in the traditional sense. However, we can provide "the best solution we can" by finding the vector p = $\widehat{x}$<sub>1</sub> a<sub>1</sub> + ··· + $\widehat{x}$<sub>n</sub> a<sub>n</sub> that is **as close as possible to the vector b**. To make the "as close as possible" more precise, we will consider the closest vector to b that cuts the column space C(A) by moving perpendicularly with respect to C(A), i.e., p will be the vector obtained with an orthogonal projection of b onto C(A). You can clearly visualize this in the shiny app. 
+As we have seen above, in our system of linear equations, there is in general no vector $x$ that will provide a proper solution of $Ax = b$ in the traditional sense. However, we can provide "the best solution we can" by finding $\widehat{x}$ such that vector $p = \widehat{x}_1 a_1 + ··· + \widehat{x}_n a_n$  is **as close as possible to the vector b**. 
 
-As p is in C(A), we can find a vector $\widehat{x}$ that solves the new system: A$\widehat{x}$ = p.
+To make the "as close as possible" more precise, we will consider the closest vector to $b$ that belongs to the column space $C(A)$ by moving perpendicularly with respect to $C(A)$, i.e., $p=p(b)$ will be the vector obtained with an orthogonal projection of $b$ onto $C(A)$. You can visualize this in the shiny app. 
 
-We will analyze this problem in three steps, which are highlighted in the section "Projection Onto a Subspace" in Chapter 4 of "Introduction to Linear Algebra", by Gilbert Strang. The steps are the following:
+As $p(b)$ is in $C(A)$, we can find a vector $\widehat{x}$ that solves the new system:
 
-1. Find the vector $\widehat{x}$. 
+$$
+A\widehat{x} = p(b)
+$$
 
-Once we have accomplished this part, the problem will be solved in practice. However, we also want to inquiry what is the orthogonal projection that has been applied under the hood. Hence we will pursue the next two steps:
 
-2. Find the projected vector p = A$\widehat{x}$.
-3. Find the projection matrix P.
+We will first find $\widehat{x}$, and then we will calculate $p(b)$, that is the projection of $b$ onto the column space $C(A)$.
 
-We will develop each of the steps and apply them to solve the example above.
+We can also calculate the projection matrix $P$ that projects any vector onto the column space $C(A)$.
+
 
 ## Find $\widehat{x}$
 
-The key to find $\widehat{x}$ is in the geometry of the error vector e, defined as follows:
+
+
+We have seen that, if $p(b)$ is the projection of $b$ onto the column space $C(A)$, then $p(b)-b$ belongs to the orthogonal space  of $C(A)$, which is the same as the null space of the transpose  of $A$, i.e, $N(A^t)$ (see the chapter 5 of the course notes).
+
+&nbsp;
+
 
 $$
-e = b - p = b - A\widehat{x}
+p(b) - b = A\widehat{x}-b \hspace{0.1cm} \textrm{ belongs to } C(A)^\perp =  N(A^t) 
 $$
-As you can see in the app, e is orthogonal to C(A). Thus, **the dot product of each column vector of A (a<sub>1</sub>,···, a<sub>n</sub>) and e is 0**. We can express this as a single matrix-vector product by transposing A, so that the column vectors become the rows of A^T^:
+means that:
 
 $$
-A^T e = 0
-$$
-Replacing e by its definition:
-
-$$
-A^T (b - A\widehat{x}) = 0
+A^t(A\widehat{x}-b)=\vec{0}
 $$
 
-Let us distribute A^T^:
+&nbsp;
+
+Let us distribute $A^t$:
 
 $$
-A^Tb - A^T A\widehat{x} = 0
+A^t A\widehat{x}-A^tb = 0 \hspace{0.1cm}  \Longrightarrow \hspace{0.1cm} A^t A\widehat{x} = A^tb 
 $$
 
-And add $A^T A\widehat{x}$ to both sides:
+
+
+We know that the symmetric matrix $A^tA$ is invertible if the column vectors are linearly independent. If that's the case, we can multiply both sides by $(A^tA)^{-1}$ and isolate $\widehat{x}$:
 
 $$
-A^Tb = A^T A\widehat{x}
+(A^t A)^{-1}( A^t A)\widehat{x} = (A^t A)^{-1} A^tb 
+$$
+$$
+\textrm{Id }\widehat{x} = (A^t A)^{-1} A^tb 
 $$
 
-We know that the symmetric matrix A^T^A is invertible if the column vectors are independent. If that's the case, we can multiply both sides by (A^T^A)^-1^ and isolate $\widehat{x}$:
 
 $$
-(A^T A)^{-1} A^Tb = (A^T A)^{-1} A^T A\widehat{x}
-$$
-$$
-(A^T A)^{-1} A^Tb = \textrm{Id}\; \widehat{x} = \widehat{x}
+\widehat{x} = (A^t A)^{-1} A^tb
 $$
 
-$$
-\widehat{x} = (A^T A)^{-1} A^Tb
-$$
 
-Let us apply this formula to the example above. To make computations easier, we will use the operations in R that we learned in the previous hands-on session. First, we compute A^T^A:
+
+
+
+
+
+
+Let us apply this formula to the example above. To make computations easier, we will use the operations in R that we learned in the previous hands-on session. First, we compute $A^tA$:
 
 ```{r}
 A <- matrix(c(1, 1, 1, 0, 1, 2), nrow = 3, ncol = 2, byrow = FALSE)
@@ -208,10 +229,10 @@ AT_A
 
 
 $$
-A^TA = `r write_matex2(t(A))` `r write_matex2(A)` = `r write_matex2(AT_A)`
+A^tA = `r write_matex2(t(A))` `r write_matex2(A)` = `r write_matex2(AT_A)`
 $$
 
-Now we find the inverse $(A^T A)^{-1}$:
+Now we find the inverse $(A^t A)^{-1}$:
 
 ```{r message=FALSE, warning=FALSE}
 library(matlib)
@@ -222,13 +243,13 @@ AT_A_inv
 ```
 
 $$
-(A^T A)^{-1} = \begin{bmatrix} 
+(A^t A)^{-1} = \begin{bmatrix} 
 5/6 & -1/2\\
 -1/2 & 1/2
 \end{bmatrix}
 $$
 
-Finally, we can solve for $\widehat{x} = (A^T A)^{-1} A^Tb$:
+Finally, we can solve for $\widehat{x} = (A^t A)^{-1} A^tb$:
 
 ```{r}
 b <- matrix(c(6, 0, 0), nrow = 3)
@@ -237,19 +258,17 @@ x_hat
 ```
 
 $$
-\widehat{x} = (A^T A)^{-1} A^Tb = \begin{bmatrix} 5/6 & -1/2\\ -1/2 & 1/2 \end{bmatrix} `r write_matex2(t(A))` `r write_matex2(b)` = \begin{bmatrix} 5 \\ -3 \end{bmatrix}
+\widehat{x} = (A^t A)^{-1} A^tb = \begin{bmatrix} 5/6 & -1/2\\ -1/2 & 1/2 \end{bmatrix} `r write_matex2(t(A))` `r write_matex2(b)` = \begin{bmatrix} 5 \\ -3 \end{bmatrix}
 $$
 
 
-**Note**: if you try to solve it by pencil and paper I would suggest starting at equation $A^Tb = A^T A\widehat{x}$, so you do not need to find an inverse.
 
+## Find $p(b)$
 
-## Find p
-
-Let us find p, which, as you remember, is the projection of b onto C(A):
+Let us find $p(b)$, which is the projection of $b$ onto $C(A)$:
 
 $$
-p = A \widehat{x} = A (A^T A)^{-1} A^Tb
+p(b) = A \widehat{x} = A (A^t A)^{-1} A^tb
 $$
 
 ```{r}
@@ -258,36 +277,45 @@ p
 ```
 
 $$
-p = `r write_matex2(A)` `r write_matex2(x_hat)` = `r write_matex2(p)`
+p(b) = `r write_matex2(A)` `r write_matex2(x_hat)` = `r write_matex2(p)`
 $$
 
 
 ## Find the projection matrix P (optional)
 
-Now we can pursue one more step to find the matrix P encoding the orthogonal projection onto the column space C(A), which describes a linear transformation that takes any vector and projects in onto C(A). If we look at what happened with b, it is easy to spot the matrix that did the job: $P = A (A^T A)^{-1} A^T$. 
+Now we can pursue one more step to find the matrix $P$ encoding the orthogonal projection onto the column space $C(A)$, which describes a linear transformation that takes any vector and projects in onto $C(A)$. 
+
+If we look at what happened with $b$, it is easy to spot the matrix that did the job: $P = A (A^t A)^{-1} A^t$. 
 
 Projection matrices have two interesting properties:
 
 1. They are symmetric
 
 $$
-P^T = P
+P^t = P
 $$
 
-2. If you square them, you get P
+2. If you square them, you get $P$
 
 $$
 P^2 = P
 $$
 
-Can you guess why? Hint: Think about what happens if you project the vector p again onto C(A).
+Can you guess why? 
+
+**Hint:** 
+
+- Try to calculate the transpose matrix of $P = A (A^t A)^{-1} A^t$.
+- Think about what happens if you project the vector $p$ again onto $C(A)$.
 
 
 # Introduction to dplyr and ggplot2
 
 In this session we move our focus from matrices to dataframes. Remember that dataframes are data structures that are 2 dimensional (tabular) and heterogeneous (can handle numerics, characters and logicals together). Intuitively, you can think of them as spreadsheets.
 
-Here, we will introduce the [tidyverse](https://www.tidyverse.org/). As defined by the authors: "The tidyverse is an opinionated collection of R packages designed for data science. All packages share an underlying design philosophy, grammar, and data structures". There is an [entire book](https://r4ds.had.co.nz/) to learn how to use this ecosystem; which at its core aims to simplify the data analysis life cycle:
+Here, we will introduce the [tidyverse](https://www.tidyverse.org/). As defined by the authors: "The tidyverse is an opinionated collection of R packages designed for data science. All packages share an underlying design philosophy, grammar, and data structures". 
+
+You can learn more about Tidyverse in this [video](https://www.linkedin.com/learning/learning-the-r-tidyverse/what-is-the-tidyverse) and this [link](https://www.storybench.org/getting-started-with-tidyverse-in-r/). There is an [entire book](https://r4ds.hadley.nz/) to learn how to use this ecosystem; which at its core aims to simplify the data analysis life cycle:
 
 ![](../img/data_science_workflow.png)
 (Image obtained from [this link](https://r4ds.had.co.nz/explore-intro.html))
@@ -296,12 +324,15 @@ In particular, we will focus on two crucial steps: transform and visualize; whic
 
 ## Dplyr
 
-To introduce this package, we will work with the iconic [gapminder dataset](https://cran.r-project.org/web/packages/gapminder/README.html), which contains information on population size, gross domestic product (GDP) and life expectancy for each country across several years. Let us start by loading it into memory:
+To introduce this package, we will work with the iconic [gapminder dataset](https://cran.r-project.org/web/packages/gapminder/readme/README.html), which contains information on population size, gross domestic product (GDP) and life expectancy for each country across several years. 
 
-```{r}
+Let us start by loading it into memory:
+
+```{r message=FALSE, warning=FALSE}
 library(tidyverse)
 gapminder <- as.data.frame(gapminder::gapminder)
 head(gapminder)
+tail(gapminder)
 ```
 
 Dplyr is centered around 5 verbs:
@@ -315,15 +346,20 @@ Dplyr is centered around 5 verbs:
 All this functions can be used together with the `group_by()` function to apply these verbs grouped by a categorical variable.
 
 In addition, dplyr aims to maximize code readability. To this end, it uses the pipe operator (`%>%`) from the [magrittr](https://cran.r-project.org/web/packages/magrittr/vignettes/magrittr.html) package to create the so-called pipelines.
-![](../img/pipe_maggrittr.png)
+![](../img/pipe_maggrittr.png){width=90%}
 (Image obtained from [this link](https://cran.r-project.org/web/packages/magrittr/vignettes/magrittr.html))
 
-Example pipeline: "Starting with the gapminder dataset, filter all rows from 2002, and then select the continent and population. With that, group the rows by continent and summarise the dataset to the mean population for each continent. Finally, arrange the results in descending order".
+You can learn more about dplyr in [this link](https://dplyr.tidyverse.org/).
+
+**Example pipeline:** 
+
+"Starting with the gapminder dataset, filter all rows from 2002, and then select the continent and population. With that, group the rows by continent and summarise the dataset to the mean population for each continent. Finally, arrange the results in descending order".
+
 
 ```{r}
 pop_by_continent <- gapminder %>%
   filter(year == "2002") %>%
-  select("continent", "pop") %>%
+  select(continent, pop) %>%
   group_by(continent) %>%
   summarise(mean_pop = mean(pop)) %>%
   arrange(desc(mean_pop))
@@ -339,25 +375,32 @@ The input to ggplot2 is a tidy dataset which is defined by the following propert
 2. Variables are columns.
 3. Observational units form a table.
 
-In short, you cannot have variables in the observations (rows) or values of a variable as columns. If that is the case, you would need to tidy the dataset (with [tidyr](https://tidyr.tidyverse.org/)) prior to data visualization. [In this link](https://towardsdatascience.com/whats-tidy-data-how-to-organize-messy-datasets-in-python-with-melt-and-pivotable-functions-5d52daa996c9) you can find examples of messy data.
+The underlying philosophy of ggplot2 is the grammar of graphics. This grammar entails that plots are formed with several components, whose relationships are structured in a layered hierarchy. 
 
-The underlying philosophy of ggplot2 is the grammar of graphics. This grammar entails that plots are formed with several components, whose relationships are structured in a layered hierarchy. This hierarchy is better visualized as a pyramid:
+This hierarchy is better visualized as a pyramid:
 
 ![](../img/grammar_of_graphics_pyramid.png)
 
 (Image obtained from [this link](https://towardsdatascience.com/a-comprehensive-guide-to-the-grammar-of-graphics-for-effective-visualization-of-multi-dimensional-1f92b4ed4149))
 
-The important concept is clearly the **layered hierarchy**, which means that (1) some components of the plot are defined first than others and (2) the plot is composed one layer at a time. The main layers, by order, are the following:
+The important concept is clearly the **layered hierarchy**, which means that 
 
-* Data: tidy dataframe.
-* Aesthetics: this word is a bit confusing at first. Aesthetics refers to every element of the plot that has a sense of "scale", and to which you can assign a variable. Examples include x and y axis, color, shape and size, among others.
-* Geometric objects (know as geoms): which type of plot do you want to obtain? Here is were you specify if you want a violin, box, bar or scatterplot, for example.
-* Themes: controls the styling of the plot: fontsize, width of the axis, etc.
+1. Some components of the plot are defined first than others, 
+2. The plot is composed one layer at a time. 
 
-As an example, we can plot the correlation between life expectancy and GDP for each country:
+The main layers, by order, are the following:
+
+* **Data:** tidy dataframe.
+* **Aesthetics:** this word is a bit confusing at first. Aesthetics refers to every element of the plot that has a sense of "scale", and to which you can assign a variable. 
+<br>Examples: x and y axis, color, shape and size, among others.
+* **Geometric objects** (know as geoms): refers to the type of plot that you want to obtain. <br>Examples: violin plot, box plot, bar plot or scatterplot, among others.
+* **Themes:** controls the styling of the plot. 
+<br>Examples: fontsize, width of the axis, etc.
+
+As an example, using the same dataset as in the previous example, we can plot the correlation between life expectancy and GDP for each country by using the functions [geom_point](https://ggplot2.tidyverse.org/reference/geom_point.html) and [geom_smooth](https://ggplot2.tidyverse.org/reference/geom_smooth.html):
 
 
-```{r}
+```{r message=FALSE, warning=FALSE}
 gapminder_2002 <- gapminder %>%
   filter(year == 2002)
 gapminder_2002 %>% 
@@ -372,14 +415,22 @@ gapminder_2002 %>%
 
 # Least Squares exercise
 
-Here is the problem that you should solve using the tools that we have seen until now:
+**Exercise:**
 
-1. Find the slope and the y-intercept of the least squares regression line between Life Expectancy ~ Income from the gapminder dataset.
-2. Plot the regression line defining manually the parameters calculated in (1) and check that they are the same.
+Use the tools that we have seen until now to:
+
+1. Find the slope and the $y$-intercept of the least squares regression line between Life Expectancy ~ Income from the gapminder data set, i.e, find $m$ and $n$ such that 
+$$
+y = mx+n
+$$ 
+the least squares regression line that approximates the Life Expectancy ($y$) given the Income ($x$). 
+2. Using **ggplot**, plot the regression line defining manually the parameters calculated in (1) and check that they are the same.
 
 Hereafter, we will develop the reasoning and solution for this exercise. You are all highly encouraged to try the problem on your own and then compare the results. Otherwise, you can follow our explanation, and try to code each chunk by yourself before looking at ours.
 
-First, we will subset the dataframe to keep only the variables of interest (life expectancy, income and country). Then we will visualize the first 3 rows with the `head()` function
+**Solution**
+
+First, we will subset the dataframe to keep only the variables of interest (life expectancy, income and country). Then we will visualize the first 3 rows with the `head()` function:
 
 
 ```{r}
@@ -400,7 +451,15 @@ head(gapminder_sub, 3)
 ```
 
 
-Our purpose is to fit a line in the form of $lifeExp = m · \log_{10}(gdpPercap) + n$, where lifeExp (life expectancy) is the dependent (or response) variable, gdpPercap (per-capita Gross domestic product) is the independent (or explanatory) variable, m is the slope and n is the y-intercept. Hence, if we represent each of the rows of the previous `head` in this form, we would get the following toy system of linear equations:
+Our purpose is to fit a line in the form of 
+
+$$
+lifeExp = m · \log_{10}(gdpPercap) + n,
+$$
+
+where *lifeExp* (life expectancy) is the dependent (or response) variable, *gdpPercap* (per-capita Gross domestic product) is the independent (or explanatory) variable, $m$ is the slope and $n$ is the $y$-intercept. 
+
+Hence, if we represent each of the rows of the previous `head` in this form, we would get the following toy system of linear equations:
 
 ```{r echo=FALSE}
 system_equations2 <- noquote(paste(expression("2.86m+n=42.19\\\\3.66m+n=75.65\\\\3.72m+n=70.99")))
@@ -409,6 +468,7 @@ system_equations2 <- noquote(paste(expression("2.86m+n=42.19\\\\3.66m+n=75.65\\\
 $$
 \begin{cases} `r system_equations2` \end{cases}
 $$
+
 Which from the column perspective we would express in $Ax = b$:
 
 ```{r echo=FALSE}
@@ -422,12 +482,14 @@ $$
 `r write_matex2(A)` `r write_matex2(x)` = `r write_matex2(b)`
 $$
 
-In our real problem, we have `r nrow(gapminder_2002)` equations for only two unknowns (slope and y-intercept). Thus, the coefficient matrix is `r nrow(gapminder_2002)`x2. As you will have guessed, to find the least squares regression line we will need to use orthogonal projections to find m and n.
+In our real problem, we have $`r nrow(gapminder_2002)`$ equations for only two unknowns (slope and $y$-intercept). Thus, the coefficient matrix is $`r nrow(gapminder_2002)`$x$2$. As you will have guessed, to find the least squares regression line we will need to use orthogonal projections to find $m$ and $n$.
 
-**Challenge**: To get a sense of how b, p and e translate in the context of a least squares problem try the shiny app.
+**Challenge**: 
+
+To get a sense of how $b$, $p$ and $p-b$ translate in the context of a least squares problem try the shiny app.
 
 
-To solve for m and n, we will first create the matrix A and the vector b. Note that the first column of A is the gdpPercap, and the vector b is  the lifeExp:
+To solve for $m$ and $n$, we will first create the matrix $A$ and the vector $b$. Note that the first column of $A$ is the *gdpPercap*, and the vector $b$ is  the *lifeExp*:
 
 ```{r}
 num_rows <- nrow(gapminder_sub)
@@ -448,7 +510,7 @@ head(b)
 We can solve the problem with the following equation (seen above):
 
 $$
-\widehat{x} = (A^T A)^{-1} A^Tb
+\widehat{x} = (A^t A)^{-1} A^tb
 $$
 
 ```{r}
@@ -462,7 +524,7 @@ out <- str_c("The slope is ", round(m, 4), " and the y-intercept is ", round(n, 
 print(out)
 ```
 
-Finally, we can recreate the plot. This time, you should manually provide *m* and *n* that you calculated by yourselves.
+Finally, we can recreate the plot. This time, you should manually provide $m$ and $n$ that you calculated by yourselves.
 
 ```{r}
 gapminder_2002 %>% 
